# ai-competency-assessment

./: .gitignore  README.md  ai-competency-assessment.sln  developer_prompt.md  gemini.md  pyproject.toml  test_scenario_output.json
backend/AiCompetency.Api/: AiCompetency.Api.csproj  AiCompetency.Api.sln  Program.cs  appsettings.json  seed_difficulty.sql
backend/AiCompetency.Api/Controllers/: AdaptiveTestsController.cs  AuthorizationController.cs  CandidateTestsController.cs  CompetencyProfileController.cs  QuestionGenerationController.cs  QuestionsController.cs  TestsController.cs
backend/AiCompetency.Api/DTOs/: TestBlueprintDto.cs
backend/AiCompetency.Api/Data/: ApplicationDbContext.cs
backend/AiCompetency.Api/Migrations/: 20260125160312_InitialAuth.Designer.cs  20260125160312_InitialAuth.cs  20260213092546_AddCompetencyEntities.Designer.cs  20260213092546_AddCompetencyEntities.cs  20260213093657_AddQuestionStatus.Designer.cs  20260213093657_AddQuestionStatus.cs  20260307050228_AddAdaptiveTestingEntities.Designer.cs  20260317231636_AddTestFieldsToExam2.cs  (+5 more)
db/: schema.sql
docs/: architecture.md  ml-methods.md
frontend/ai-competency-ui/: angular.json  package-lock.json  package.json  tsconfig.json
infra/: docker-compose.yml
services/ai-integration/: README.md
services/grading-engine/: README.md
services/queue-worker/: README.md
services/sandbox/: README.md
src/ai_competency_assessment/: __init__.py  cli.py
src/ml_service/: main.py  models.py  requirements.txt
src/question-generator/: Dockerfile  README.md  docker-compose.yml  requirements.txt
(+143 files in other folders)
